service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-dialect-unauth-svc
  labels:
    app: go-dialect-unauth-app
spec:
  # type: LoadBalancer 
  ports:
  - port: 9001
    targetPort: 9001
    protocol: TCP
