ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dialect-unauth-ingress
  namespace: cmkl
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  type: LoadBalancer
  tls:
    - hosts:
        - voice-staging.cmkl.ac.th
  rules:
    - host: voice-staging.cmkl.ac.th
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dialect-unauth-front-svc
                port:
                  number: 8082
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: dialect-unauth-svc
                port:
                  number: 3001
